--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+#localVideo {
+  width: 360px;
+  height: 720px;
+  border: 1px solid green;
+}
+#remoteVideo {
+  width: 360px;
+  border: 1px solid black;
 }
